--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
      <br>
 
     <div class="self">
-        <a href="https://www.instagram.com/invites/contact/?i=czketc9tfer0&utm_content=t1oecv8 "><i class="ri-instagram-line"></i></a>
+        <a href=" https://www.instagram.com/invites/contact/?i=okgy370dze0r&utm_content=472hg7p" ><i class="ri-instagram-line"></i></a>
         <a href="https://wa.me/919765601792"><i class="ri-whatsapp-line"></i></a>
         <a href="https://www.snapchat.com/add/sonuux.792?share_id=0BiPjvmHmDo&locale=en-US"><i class="ri-snapchat-line"></i></a>
         <a href=" https://x.com/RamanandSh89150?t=A4IlwHddJVBP6ugHiBdsYg&s=08 "><i class="ri-twitter-x-line"></i></a>
