Fix HTML syntax for service images

--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         <div class="services-div">
           <h1>Services</h1>
           <div class="service-type">
-            <a href="productPage.html"><img src="/logo2.jpeg" alt="images"  /></a>
+            <a href="productPage.html"><img src="logo2.jpeg" alt="images"  /></a>
           </div>
           <label for="">Womens</label>
 
           <div class="service-type">
-            <a href="salon_men.html"><img src="/logomen.jpeg" alt="images"  /></a>
+            <a href="salon_men.html"><img src="logomen.jpeg" alt="images"  /></a>
           </div>
           <label for="">Men</label>
 
