Fix image source paths in index.html

--- a/index.html
+++ b/index.html
@@ -73,17 +73,17 @@
           <label for="">Men</label>
 
           <div class="service-type">
-            <a href="kids.section.html"><img src="/logo3.jpeg" alt="images" /></a>
+            <a href="kids.section.html"><img src="logo3.jpeg" alt="images" /></a>
           </div>
           <label for="">kids</label>
 
           <div class="service-type">
-            <a href="kids.section2.html"><img src="/kids.jpeg" alt="images"  /></a>
+            <a href="kids.section2.html"><img src="kids.jpeg" alt="images"  /></a>
           </div>
           <label for="">kids</label>
 
           <div class="service-type">
-            <a href="#"><img src="/groom.jpeg" alt="images" /></a>
+            <a href="#"><img src="groom.jpeg" alt="images" /></a>
           </div>
           <label for="">Bride & groom</label>
 
@@ -96,20 +96,20 @@
         <div class="video-div">
               <div class="maincontener">
                 <div class="container1">
-                   <img src="/barber4.jpg" alt="">
+                   <img src="barber4.jpg" alt="">
                 </div>
                 <div class="container2">
-                  <img src="/Gemini_Generated_Image_om7rg1om7rg1om7r.png" alt="">
+                  <img src="Gemini_Generated_Image_om7rg1om7rg1om7r.png" alt="">
                 </div>
                
               </div>
 
               <div class="maincontener2">
                  <div class="container3">
-                  <img src="/Gemini_Generated_Image_t4ethut4ethut4et.png" alt="">
+                  <img src="Gemini_Generated_Image_t4ethut4ethut4et.png" alt="">
                 </div>
                 <div class="container4">
-                  <img src="/Gemini_Generated_Image_2zpx1w2zpx1w2zpx.png" alt="">
+                  <img src="Gemini_Generated_Image_2zpx1w2zpx1w2zpx.png" alt="">
                 </div>
               </div>
 
@@ -188,7 +188,7 @@
 
 <div class="box12">
   <a href="video.booking.html"><video autoplay loop muted plays-inline id="video">
-                <source src="/Notification-remix.mp4" type="video/mp4">
+                <source src="Notification-remix.mp4" type="video/mp4">
                 </source>
             </video></a>
 </div>
