Change location link to index2.html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="location">
           <i class="ri-map-pin-line"></i>
-          <a href="/location.html"><input type="text" placeholder="Choose location.." /></a>
+          <a href="index2.html"><input type="text" placeholder="Choose location.." /></a>
         </div>
         <div class="manu-bar">
           <a id="menu" href="service.html">Services</a>
